Componentização da topbar.

--- a/index.html
+++ b/index.html
@@ -1,25 +1,59 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Metal Trybes</title>
+    <title>Metal Trybes (icone de rock)</title>
 
     <meta name="author" content="Cauê Coser">
     <meta name="description" content="Rede Social Hipotética">
-    <meta name="keywords" content="rede, rede social, social, net, contato, amizade, conteúdo, foto, conexão, atividade, texto, notícia, evento">
+    <meta name="keywords"
+        content="rede, rede social, social, net, contato, amizade, conteúdo, foto, conexão, atividade, texto, notícia, evento">
 
+    <script src="https://kit.fontawesome.com/6a12cd8b7d.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <div class="background">
-        <div class="topbar"></div>
-        <div class="pagebody">
-            <div class="profile"></div>
-            <div class="interactions"></div>
-            <div class="conections"></div>
+    <div class="background row">
+
+        <div class="topbar row col-lg-12">
+            <div class="logo col-lg-6">
+                <h2 class="">Metal Trybes (icone de rock)</h2>
+            </div>
+            <div class="halftop row col-lg-6">
+                <div class="topsearch col-lg-6">
+                    <input type="text" class="input" name="search" id="searchinput" placeholder="Buscar...">
+                    <input type="button" class="button sqrbutton" value="">
+                </div>
+                <div class="topbuttons col-lg-6">
+                    <input type="button" class="button sqrbutton" value="">
+                    <input type="button" class="button sqrbutton" value="">
+                    <input type="button" class="button sqrbutton" value="">
+                    <input type="button" class="button sqrbutton" value="FT">
+                    <!-- <img class="smallprofile" src="profile" alt="" srcset=""> -->
+                </div>
+            </div>
         </div>
+
+
+
+
+
+        <div class="pagebody row col-lg-12">
+            <div class="profile col-lg-4"></div>
+            <div class="interactions col-lg-5"></div>
+            <div class="conections col-lg-3"></div>
+        </div>
+        
     </div>
+
+    <script src="https://kit.fontawesome.com/6a12cd8b7d.js" crossorigin="anonymous"></script>
+
+
+
 </body>
+
 </html>
