Início da construção da primeira seção do corpo principal.

--- a/index.html
+++ b/index.html
@@ -5,54 +5,79 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Metal Trybes (icone de rock)</title>
+    <title>Metal Trybes &#129304;</title>
 
     <meta name="author" content="Cauê Coser">
     <meta name="description" content="Rede Social Hipotética">
     <meta name="keywords"
         content="rede, rede social, social, net, contato, amizade, conteúdo, foto, conexão, atividade, texto, notícia, evento">
 
-    <script src="https://kit.fontawesome.com/6a12cd8b7d.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/c42ac0f6c6.js" crossorigin="anonymous"></script>
+
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <div class="background row">
 
-        <div class="topbar row col-lg-12">
-            <div class="logo col-lg-6">
-                <h2 class="">Metal Trybes (icone de rock)</h2>
+    <div class="background">
+
+        <div class="topbar row">
+
+            <div class="divlogo col-lg-6">
+                <a href="#"><img class="mt_logo" src="./assets/images/logo_mt_sm.png" alt="metal_trybes_logo"></a>
             </div>
+
             <div class="halftop row col-lg-6">
                 <div class="topsearch col-lg-6">
                     <input type="text" class="input" name="search" id="searchinput" placeholder="Buscar...">
-                    <input type="button" class="button sqrbutton" value="">
+                    <button class="button sqrform" value=""><svg class="search_svg" width="24" height="24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                        <g clip-path="url(#clip0_2177_173)">
+                        <path d="M15.5 14H14.71L14.43 13.73C15.41 12.59 16 11.11 16 9.5C16 5.91 13.09 3 9.5 3C5.91 3 3 5.91 3 9.5C3 13.09 5.91 16 9.5 16C11.11 16 12.59 15.41 13.73 14.43L14 14.71V15.5L19 20.49L20.49 19L15.5 14ZM9.5 14C7.01 14 5 11.99 5 9.5C5 7.01 7.01 5 9.5 5C11.99 5 14 7.01 14 9.5C14 11.99 11.99 14 9.5 14Z"/>
+                        </g>
+                        <defs>
+                        <clipPath id="clip0_2177_173">
+                        <rect width="24" height="24" fill="white"/>
+                        </clipPath>
+                        </defs>
+                        </svg>
+                        </button>
                 </div>
+
                 <div class="topbuttons col-lg-6">
-                    <input type="button" class="button sqrbutton" value="">
-                    <input type="button" class="button sqrbutton" value="">
-                    <input type="button" class="button sqrbutton" value="">
-                    <input type="button" class="button sqrbutton" value="FT">
-                    <!-- <img class="smallprofile" src="profile" alt="" srcset=""> -->
+                    <button class="button sqrform" value=""><img src="./assets/icons/icons.svg"
+                            alt="message_icon"></button>
+                    <button class="button sqrform" value=""><img src="./assets/icons/iconscog.svg"
+                            alt="configuration_icon"></button>
+                    <button class="button sqrform" value=""><img src="./assets/icons/iconsalert.svg"
+                            alt="nitification_icon"><svg class="reddot" width="10" height="10" viewBox="0 0 10 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <circle cx="5" cy="5" r="5"/>
+                                </svg></button>
+                    <button class="button sqrform" value=""><img src="./assets/images/profile.jpg"
+                            alt="small_avatar"></button>
                 </div>
             </div>
+
         </div>
 
+        <div class="pagebody row">
+            <div class="profile col-lg-4">
+                <div class="cover_cont">
+                    <img class="cover" src="./assets/images/Iron-Maiden-Logo.png" alt="cover_image">
+                </div>
+                <div class="avatar_cont">
+                    <img class="avatar" src="./assets/images/avatar.jpg" alt="avatar_image">
+                </div>
+
+            </div>
 
 
 
 
-        <div class="pagebody row col-lg-12">
-            <div class="profile col-lg-4"></div>
             <div class="interactions col-lg-5"></div>
             <div class="conections col-lg-3"></div>
         </div>
-        
+
     </div>
-
-    <script src="https://kit.fontawesome.com/6a12cd8b7d.js" crossorigin="anonymous"></script>
-
-
 
 </body>
 
