Conlusão do projeto final do módulo de CSS.

--- a/index.html
+++ b/index.html
@@ -21,12 +21,14 @@
 
         <div class="topbar row col-lg-12 col-md-12 col-sm-12">
 
-            <div class="divlogo col-lg-6 col-md-5 col-sm-5">
-                <a href="#"><img class="mt_logo" src="./assets/images/logo_mt_sm.png" alt="metal_trybes_logo"></a>
-            </div>
+            <a href="#" class="alogo col-lg-6 col-md-5 col-sm-5">
+                <div class="divlogo">
+                    <img class="mt_logo" src="./assets/images/logo_mt_sm.png" alt="metal_trybes_logo">
+                </div>
+            </a>
 
             <div class="topsearch col-lg-3 col-md-4 col-sm-4">
-                <input type="text" class="input" name="search" id="searchinput" placeholder="Buscar...">
+                <input type="text" class="input" name="search" placeholder="Buscar...">
                 <a href="#">
                     <button class="button sqrform" value="">
                         <svg class="search_svg" width="24" height="24" viewBox="0 0 24 24"
@@ -45,7 +47,7 @@
                 </a>
             </div>
 
-            <div class="topbuttons col-lg-3 col-md-3 col-sm-">
+            <div class="topbuttons col-lg-3 col-md-3 col-sm-3">
                 <a href="#">
                     <button class="button sqrform ndifsm" value="">
                         <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -123,7 +125,7 @@
         </div>
 
         <div class="pagebody row">
-            <div class="profile col-lg-4 ndifsm">
+            <div class="profile col-lg-4 col-md-5 ndifsm">
                 <div class="cover_cont">
                     <img class="cover" src="./assets/images/Iron-Maiden-Logo.png" alt="cover_image">
                 </div>
@@ -460,7 +462,8 @@
                                 </a>
                                 <a href="#">
                                     <button class="button">Share</button>
-                                </a>                            </div>
+                                </a>
+                            </div>
                             <div>
                                 <p>102 coments</p>
                             </div>
@@ -484,7 +487,7 @@
                 </div>
             </div>
 
-            <div class="conections col-lg-3 col-md-5 ndifmd ndifsm">
+            <div class="conections col-lg-3 ndifmd">
                 <div class="like_you">
                     <h2>Others Like You</h2>
 
@@ -771,6 +774,7 @@
                     </div>
                 </div>
             </div>
+
             <div class="fixedbtn">
                 <a href="#">
                     <button class="button sqrform">
